--- a/estilos.css
+++ b/estilos.css
@@ -139,3 +139,11 @@ li .oracion-btn:nth-child(3) { animation-delay: 0.3s; }
   font-size: 1rem;
   line-height: 1.6;
 }
+
+section.libro {
+  display: none;
+}
+
+section.libro.activo {
+  display: block;
+}
